examples/invalid/ns/memory/hello_task_glm_result_payload_invalid.ns
mod cpu Main {
  async fn consume(result: TaskResult<i64>) -> i64 {
    if task_completed(result) {
      return 1;
    }
    return 0;
  }

  fn main() -> i64 {
    return 1;
  }
}
